--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sciblog
-email: airrayagroup@gmail.com
+title:  Ahn 的自留地
+email: phoenixahn@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/Good" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-author: AIRRAYA
+author: Ahn
 
 # Gems
 plugins: [jekyll-paginate]
