--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:  Ahn 的自留地
+title:  Ahn's plots
 email: phoenixahn@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/Good" # the subpath of your site, e.g. /blog
