--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title:  Ahn's plots
 email: phoenixahn@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "/Good" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author: Ahn
 
