--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title:  Ahn's plots
 email: phoenixahn@outlook.com
-description: > # this means to ignore newlines until "baseurl:"
+description: A blog used to record everyday # this means to ignore newlines until "baseurl:"
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author: Ahn
